Navbar component finished for md

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* @tailwind base;
+@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
@@ -7,12 +7,12 @@
 }
 
 .rounded-div{
-      @apply border border-secondary rounded-2xl shadow-xl bg-primary px-2 max-w-[1140px] w-full mx-auto;
+      @apply border border-secondary rounded-2xl shadow-xl bg-primary px-2 max-w-[1340px] w-full mx-auto;
 }
 
 .dark {
     --color-bg-primary: #2d3748;
-    --color-bg-primary: #2d3748;
+    --color-bg-primary: #24282f;
     --color-bg-secondary: #283141;
     --color-text-primary: #dbdbdb;
     --color-text-secondary: #e2e8f0;
@@ -29,4 +29,4 @@
     --color-text-accent: #2b6cb0;
     --color-bg-input: #edf2f7;
     --color-bg-button: #2b6cb0;
-  } */
+  }
