--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 :root{
     @apply bg-primary text-primary;
 }
-
+/* //max-w-[1380px] */
 .rounded-div{
       @apply border border-secondary rounded-2xl shadow-xl bg-primary px-2 max-w-[1380px] w-full mx-auto;
 }
